# Python-Guides

./: Poetry.md  Venv.md  pyproject.toml
algorithms/: sort.py
