[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"